# compiler

./: .gitattributes  .gitignore  COMMANDS.md  README.md
src/ch3/: GRADES  Makefile  allocate_registers.ml  allocate_registers.mli  build_interference.ml  build_interference.mli  compile.ml  cvar.ml  cvar.mli  dune  explicate_control.ml  graph_coloring.ml  interp_cvar.ml  interp_cvar.mli  interp_lvar.ml  interp_lvar.mli  interp_lvar_mon.ml  interp_lvar_mon.mli  lvar.ml  lvar.mli  lvar_mon.ml  lvar_mon.mli  parser.ml  parser.mli  patch_instructions.ml  patch_instructions.mli  prelude_conclusion.ml  print_asm.ml  remove_complex.ml  remove_complex.mli  runtime.h  select_instructions.ml  select_instructions.mli  test_graph_coloring.ml  types.ml  types.mli  uncover_live.ml  uncover_live.mli  uniquify.ml  utop_init  (+6 more)
src/ch3/reference/: var_test_1.lvar  var_test_1.rc  var_test_1.ul  var_test_10.ar,rcx  var_test_10.bi,rbx  var_test_10.pa,rcx  var_test_10.pc,rbx  var_test_10.pc,rcx  var_test_10.pi,rcx,rbx  var_test_10.ul  var_test_11.ar  var_test_11.ar,rbx  var_test_11.ar,rcx  var_test_11.ar,rcx,rbx  var_test_11.bi,rbx  var_test_11.lvar  var_test_11.pa  var_test_11.pa,rbx  var_test_11.pa,rcx  var_test_11.pa,rcx,rbx  var_test_11.pc  var_test_11.pc,rbx  var_test_11.pc,rcx  var_test_11.pc,rcx,rbx  var_test_11.pi  var_test_11.pi,rbx  var_test_11.pi,rcx  var_test_11.pi,rcx,rbx  var_test_11.rc  var_test_11.si  var_test_11.ul  var_test_12.ar,rbx  var_test_12.ar,rcx,rbx  var_test_12.bi,rcx  var_test_12.ec  var_test_12.lvar  var_test_12.pa  var_test_12.pa,rbx  var_test_12.pc,rbx  var_test_12.pc,rcx  (+981 more)
src/ch3/scripts/: compare.py  run_eval_tests.py
src/ch3/tests/: var_test_1.src  var_test_11.src  var_test_15.src  var_test_21.src  var_test_22.src  var_test_23.src  var_test_24.src  var_test_26.src  var_test_28.src  var_test_29.src  var_test_3.src  var_test_30.src  var_test_31.src  var_test_32.src  var_test_33.src  var_test_35.src  var_test_36.src  var_test_4.src  var_test_40.src  var_test_41.src  var_test_45.src  var_test_48.src  var_test_49.src  var_test_50.src  (+13 more)
src/ch4/: CHECKLIST.md  GRADES  Makefile  allocate_registers.ml  allocate_registers.mli  build_interference.ml  build_interference.mli  cif.ml  cif.mli  compile.ml  dune  explicate_control.ml  explicate_control.mli  graph_coloring.ml  graph_coloring.mli  interp.ml  interp.mli  interp_cif.ml  interp_cif.mli  interp_lif.ml  interp_lif.mli  interp_lif_mon.ml  interp_lif_mon.mli  interp_lif_shrink.ml  interp_lif_shrink.mli  lif.ml  lif.mli  lif_mon.ml  lif_mon.mli  lif_shrink.ml  lif_shrink.mli  parser.ml  parser.mli  patch_instructions.ml  patch_instructions.mli  prelude_conclusion.ml  prelude_conclusion.mli  print_asm.ml  remove_complex.ml  remove_complex.mli  (+27 more)
src/ch5/: CHECKLIST.md  GRADES  Makefile  allocate_registers.ml  allocate_registers.mli  build_interference.ml  build_interference.mli  cloop.ml  cloop.mli  compile.ml  dune  explicate_control.ml  explicate_control.mli  interp.ml  interp.mli  interp_cloop.ml  interp_cloop.mli  interp_lwhile.ml  interp_lwhile.mli  interp_lwhile_get.ml  interp_lwhile_get.mli  interp_lwhile_mon.ml  interp_lwhile_mon.mli  interp_lwhile_shrink.ml  interp_lwhile_shrink.mli  lwhile.ml  lwhile.mli  lwhile_get.ml  lwhile_get.mli  lwhile_mon.ml  lwhile_mon.mli  lwhile_shrink.ml  lwhile_shrink.mli  parser.ml  parser.mli  patch_instructions.ml  patch_instructions.mli  prelude_conclusion.ml  prelude_conclusion.mli  print_asm.ml  (+30 more)
src/ch6/: CHECKLIST.md  GRADES  Makefile  NOTES.md  alloc_utils.ml  allocate_registers.ml  allocate_registers.mli  build_interference.ml  build_interference.mli  compile.ml  ctup.ml  ctup.mli  dune  explicate_control.ml  explicate_control.mli  expose_allocation.ml  expose_allocation.mli  graph_coloring.ml  graph_coloring.mli  interp.ml  interp.mli  interp_ctup.ml  interp_ctup.mli  interp_lalloc.ml  interp_lalloc.mli  interp_lalloc_get.ml  interp_lalloc_get.mli  interp_lalloc_mon.ml  interp_lalloc_mon.mli  interp_ltup.ml  interp_ltup.mli  interp_ltup_shrink.ml  interp_ltup_shrink.mli  interp_utils.ml  interp_utils.mli  lalloc.ml  lalloc.mli  lalloc_get.ml  lalloc_get.mli  lalloc_mon.ml  (+45 more)
src/ch7/: CHECKLIST.md  GRADES  Makefile  alloc_utils.mli  allocate_registers.ml  allocate_registers.mli  build_interference.ml  build_interference.mli  cfun.ml  cfun.mli  compile.ml  dune  explicate_control.ml  explicate_control.mli  expose_allocation.ml  graph_coloring.ml  interp.ml  interp.mli  interp_cfun.ml  interp_cfun.mli  interp_lfun.ml  interp_lfun.mli  interp_lfun_ref.ml  interp_lfun_ref.mli  interp_lfun_ref_alloc.ml  interp_lfun_ref_alloc.mli  interp_lfun_ref_alloc_get.ml  interp_lfun_ref_alloc_get.mli  interp_lfun_ref_mon.ml  interp_lfun_ref_mon.mli  interp_lfun_shrink.ml  interp_lfun_shrink.mli  interp_utils.ml  interp_utils.mli  lfun.ml  lfun.mli  lfun_ref.ml  lfun_ref.mli  lfun_ref_alloc.ml  lfun_ref_alloc.mli  (+50 more)
(+5257 files in other folders)
