(library
  (name ch4)
  (modules
    types
    ; data structures
    graph_coloring
    ; intermediate languages
    lif lif_shrink lif_mon cif x86_var_if x86_if x86_asm
    ; definitional interpreters
    interp
    interp_lif interp_lif_shrink interp_lif_mon interp_cif
    ; type checking
    type_check type_check_lif type_check_cif
    ; parsing
    parser
    ; compiler passes
    shrink
    uniquify
    remove_complex
    explicate_control
    remove_unused
    select_instructions
    uncover_live
    build_interference
    allocate_registers
    remove_jumps
    patch_instructions
    prelude_conclusion
    print_asm
    )
  (libraries sexplib str unix support)
  (preprocess (pps ppx_sexp_conv))
  (modes byte))

(executable
  (name compile)
  (libraries ch4)
  (modules compile)
  (modes byte) )

(env
  (dev
    (flags (:standard -warn-error -A))))
