(library
  (name ch5)
  (modules
    types
    ; data structures
    graph_coloring
    ; intermediate languages
    lwhile lwhile_shrink lwhile_get lwhile_mon cloop
    x86_var_loop x86_loop x86_asm
    ; definitional interpreters
    interp
    interp_lwhile interp_lwhile_shrink
    interp_lwhile_get interp_lwhile_mon interp_cloop
    ; type checking
    type_check type_check_lwhile type_check_cloop
    ; parsing
    parser
    ; compiler passes
    shrink
    uniquify
    uncover_get
    remove_complex
    explicate_control
    remove_unused
    select_instructions
    uncover_live
    build_interference
    allocate_registers
    remove_jumps
    patch_instructions
    prelude_conclusion
    print_asm
    )
  (libraries sexplib str unix support)
  (preprocess (pps ppx_sexp_conv))
  (modes byte))

(executable
  (name compile)
  (libraries ch5)
  (modules compile)
  (modes byte) )

(env
  (dev
    (flags (:standard -warn-error -A))))
